--- a/css/syntax.css
+++ b/css/syntax.css
@@ -5,8 +5,6 @@
 
 .highlight  {
 	background: #ffffff;
-	white-space: pre-wrap;
-	word-wrap: break-word;
 }
 
 .highlight pre { 
